[package]
name = "tweetshot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.26.0"
tokio = "1.9.0"
url = "2.2.2"
pico-args = "0.4.2"
const_format = { version = "0.2.17", features = ["fmt"] }